# i3-sway-switch-window

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: construction.org
elisp/: emacs-with-nyxt.el
i3_sway_switch_window/: __version__.py  browser_tab_list.py  config.py  display_error_message.py  emacs_buffer_lists.py  emacs_recentf_list.py  get_nyxt_title_url.py  get_qutebrowser_title_url.py  i3_do_add.py  i3_do_switch.py  main.py  wm_window_list.py
i3_switch_window/: __init__.py  __main__.py  __version__.py  browser_tab_list.py  config.py  display_error_message.py  emacs_buffer_lists.py  emacs_recentf_list.py  i3_do_add.py  i3_do_switch.py  main.py
